[package]
name = "bitcask-rs"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_operations"
path = "exapmles/basic_operations.rs"

[[bench]]
name = "kv_bench"
harness = false

[dependencies]
parking_lot = "0.12.3"
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.65"
bytes = "1.8.0"
prost = "0.13.3"
crc32fast = "1.4.2"
lazy_static = "1.4.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
fs2 = "0.4.3"
memmap2 = "0.9.5"
crossbeam-skiplist = "0.1.3"
jammdb = "0.11.0"
fs_extra = "1.3.0"
criterion = "0.5"
rand = "0.8.5"

[workspace]
members = ["http"]
